switched from File to URL
git-svn-id: https://svn.code.sf.net/p/genj/code/trunk@1458 fbd980a2-0dff-11df-b4b7-0b05b74d0985